alterando name para teste

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ES6",
+  "name": "teste",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/julioaze/aula_ES6.git",
